Do not touch of the read notifier after its creation

When are used the multiple opening and closing chains, then a read
notification can be stalled. The reason is in old heritage of a code
related to preventing of recursive calls. Thus, need just to remove this
old code. It is not the in-depth investigation of an issue but just a
workaround which can be improved in future.

Tested on Linux with on-board and socat serial ports using Qt5.

Task-number: QTBUG-43484
Change-Id: I04556fdde2775448b33d68f141f4328647c549c9
Reviewed-by: Denis Shienkov <denis.shienkov@gmail.com>